# ML_BigData_Repo_1

./: Makefile  README.md  pyproject.toml
docs/: Credit_Card_Fraud_Detection_Project.pptx  Credit_Card_Fraud_Detection_Project_BigData.pptx  Credit_Card_Fraud_Detection_Project_ML.pptx  ML_Notes.docx  ~$Credit_Card_Fraud_Detection_Project_ML.pptx
models/: Test_credit_fraud_detection_model_logistic_regression_balanced.pkl  Test_decision_tree_model_credit_fraud_detection_.pkl  Test_logistic_regression_credit_fraud_detection_model.pkl  Train_best_decision_tree_model.pkl  Train_credit_fraud_detection_model_logistic_regression_balanced.pkl  basic_decision_tree.pkl  basic_decision_tree_fraudtrain_columns.pkl  decision_tree.pkl  decisiontrees_parallelized_gridsearch.pkl  xgboost_with_smote_sacle_pos_weight=5_Train.pkl
notebooks/: Project_Presentation_BigData.ipynb  Project_Presentation_ML.ipynb  Untitled.ipynb  v_0.0_LogisticRegression_Credit_Card_Fraud_Detection.ipynb  v_0.1_LogisticRegression_Balanced_Credit_Card_Fraud_Detection.ipynb  v_1.0.1_DecisionTrees_Parallelized_Credit_Card_Fraud_Detection.ipynb  v_1.0_DecisionTrees_Credit_Card_Fraud_Detection.ipynb  v_1.1_DecisionTrees_Credit_Card_Fraud_Detection.ipynb  v_1.1_DecisionTrees_Parallelized_GridSearch_Credit_Card_Fraud_Detection.ipynb  v_1.2_DecisionTrees_OptFeat_Parallelized_GridSearch_Credit_Card_Fraud_Detection.ipynb  v_2.0.0_RandomForest_Credit_Card_Fraud_Detection.ipynb  v_2.0.1_RandomForest_use_DASK_to_train_Model_Credit_Card_Fraud_Detection.ipynb  v_2.0_RandomForest_Credit_Card_Fraud_Detection.ipynb  (+4 more)
(+138 files in other folders)
