[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Credit_Card_Fraud_Detection"
version = "0.0.1"
description = "Objectives:"
authors = [
  { name = "Sadhvi_Chandragiri" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=Implement graph-based anomaly detection to identify fraudulent patterns."

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Credit_Card_Fraud_Detection"]
force_sort_within_sections = true
